--- a/src/app/pages/auth/password/password.component.html
+++ b/src/app/pages/auth/password/password.component.html
@@ -1,3 +1,5 @@
+<h1>Login</h1>
+
 <form [formGroup]="form" (submit)="submit($event)">
   <label>
     Name/E-Mail:
@@ -7,5 +9,5 @@
     Password:
     <input type="password" formControlName="password">
   </label>
-  <input type="submit" [disabled]="valid | async" value="Login">
+  <input type="submit" [disabled]="!(valid | async)" value="Login">
 </form>
