added basic record management

--- a/src/app/pages/dns/zones/zones.component.html
+++ b/src/app/pages/dns/zones/zones.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let zone of (zones | async)">
+  <li *ngFor="let zone of (zones | async); trackBy trackBy">
     <a [routerLink]="zone.id">{{ zone.name }}</a>
   </li>
 </ul>
