--- a/src/app/lib/components/dns/create-record/mx-record-form/mx-record-form.component.html
+++ b/src/app/lib/components/dns/create-record/mx-record-form/mx-record-form.component.html
@@ -12,7 +12,7 @@
     <input type="text" formControlName="exchange">
   </label>
   <label>
-    Time to live:
+    Time to live (sec):
     <input type="number" formControlName="ttl">
   </label>
   <input type="submit" [disabled]="!(valid | async)" value="Create">
