--- a/src/app/pages/dns/zone/zone.component.html
+++ b/src/app/pages/dns/zone/zone.component.html
@@ -1,22 +1,142 @@
-<ul>
-  <li *ngFor="let record of (aRecords | async); trackBy trackBy">
-    A: {{ record.name }} - {{ record.addr }}
-  </li>
-  <li *ngFor="let record of (aaaaRecords | async); trackBy trackBy">
-    AAAA: {{ record.name }} - {{ record.addr }}
-  </li>
-  <li *ngFor="let record of (cnameRecords | async); trackBy trackBy">
-    CNAME: {{ record.name }} - {{ record.target }}
-  </li>
-  <li *ngFor="let record of (mxRecords | async); trackBy trackBy">
-    MX: {{ record.name }} - {{ record.preference }} {{ record.exchange }}
-  </li>
-  <li *ngFor="let record of (nsRecords | async); trackBy trackBy">
-    NS: {{ record.name }} - {{ record.target }}
-  </li>
-  <li *ngFor="let record of (txtRecords | async); trackBy trackBy">
-    TXT: {{ record.name }} - {{ record.content }}
-  </li>
-</ul>
+<h1>Zone {{ (zone | async)?.name }}</h1>
 
-<button *ngIf="(zoneId | async) as zoneId" (click)="new(zoneId)">New Record</button>
+<table>
+  <thead>
+  <tr>
+    <th>Type</th>
+    <th>Name</th>
+    <th>Data</th>
+    <th>Actions</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let record of (aRecords | async); trackBy trackBy">
+    <td>A</td>
+    <td>{{ record.name }}</td>
+    <td>{{ record.addr }}</td>
+    <td>
+      <div class="actions">
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+          </svg>
+        </button>
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </button>
+      </div>
+    </td>
+  </tr>
+  <tr *ngFor="let record of (aaaaRecords | async); trackBy trackBy">
+    <td>AAAA</td>
+    <td>{{ record.name }}</td>
+    <td>{{ record.addr }}</td>
+    <td>
+      <div class="actions">
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+          </svg>
+        </button>
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </button>
+      </div>
+    </td>
+  </tr>
+  <tr *ngFor="let record of (cnameRecords | async); trackBy trackBy">
+    <td>CNAME</td>
+    <td>{{ record.name }}</td>
+    <td>{{ record.target }}</td>
+    <td>
+      <div class="actions">
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+          </svg>
+        </button>
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </button>
+      </div>
+    </td>
+  </tr>
+  <tr *ngFor="let record of (mxRecords | async); trackBy trackBy">
+    <td>MX</td>
+    <td>{{ record.name }}</td>
+    <td>{{ record.preference }} {{ record.exchange }}</td>
+    <td>
+      <div class="actions">
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+          </svg>
+        </button>
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </button>
+      </div>
+    </td>
+  </tr>
+  <tr *ngFor="let record of (nsRecords | async); trackBy trackBy">
+    <td>NS</td>
+    <td>{{ record.name }}</td>
+    <td>{{ record.target }}</td>
+    <td>
+      <div class="actions">
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+          </svg>
+        </button>
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </button>
+      </div>
+    </td>
+  </tr>
+  <tr *ngFor="let record of (txtRecords | async); trackBy trackBy">
+    <td>TXT</td>
+    <td>{{ record.name }}</td>
+    <td>{{ record.content }}</td>
+    <td>
+      <div class="actions">
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+          </svg>
+        </button>
+        <button class="icon">
+          <svg height="24" viewBox="0 -960 960 960" width="24">
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+          </svg>
+        </button>
+      </div>
+    </td>
+  </tr>
+  </tbody>
+</table>
+
+<button *ngIf="(zoneId | async) as zoneId" (click)="new(zoneId)" class="new">New Record</button>
