--- a/src/app/lib/components/dns/create-record/aaaa-record-form/aaaa-record-form.component.html
+++ b/src/app/lib/components/dns/create-record/aaaa-record-form/aaaa-record-form.component.html
@@ -8,7 +8,7 @@
     <input type="text" formControlName="addr">
   </label>
   <label>
-    Time to live:
+    Time to live (sec):
     <input type="number" formControlName="ttl">
   </label>
   <input type="submit" [disabled]="!(valid | async)" value="Create">
