--- a/src/app/lib/components/dns/create-record/record-form.component.scss
+++ b/src/app/lib/components/dns/create-record/record-form.component.scss
@@ -1,9 +1,11 @@
 form {
   display: flex;
   flex-direction: column;
+  gap: 0.4rem;
 
   label {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
   }
 }
