--- a/src/app/pages/dns/dns.component.html
+++ b/src/app/pages/dns/dns.component.html
@@ -1,1 +1,15 @@
-<router-outlet/>
+<aside>
+  <h1>DNS</h1>
+
+  <ul>
+    <li *ngFor="let zone of (zones | async); trackBy trackBy">
+      <a [routerLink]="zone.id">{{ zone.name }}</a>
+    </li>
+  </ul>
+
+  <button (click)="new()">New Zone</button>
+</aside>
+
+<div class="body">
+  <router-outlet/>
+</div>
