--- a/src/app/lib/components/dns/create-zone/create-zone.component.html
+++ b/src/app/lib/components/dns/create-zone/create-zone.component.html
@@ -3,5 +3,5 @@
     Name:
     <input type="text" formControlName="name">
   </label>
-  <input type="submit" [disabled]="!(valid | async)" value="Create">
+  <input type="submit" [disabled]="!(valid | async)" value="Submit">
 </form>
