--- a/src/app/lib/components/dns/record-form/record-form.component.html
+++ b/src/app/lib/components/dns/record-form/record-form.component.html
@@ -1,6 +1,6 @@
 <label>
   Record Type:
-  <select [formControl]="recordType">
+  <select [formControl]="recordTypeForm">
     <option value="a">A</option>
     <option value="aaaa">AAAA</option>
     <option value="cname">CNAME</option>
