--- a/src/app/pages/dns/zone/zone.component.html
+++ b/src/app/pages/dns/zone/zone.component.html
@@ -16,7 +16,7 @@
     <td>{{ record.addr }}</td>
     <td>
       <div class="actions">
-        <button class="icon">
+        <button class="icon" (click)="edit(record.zone_id, RecordType.A, record.id)">
           <svg height="24" viewBox="0 -960 960 960" width="24">
             <path
               d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
@@ -37,7 +37,7 @@
     <td>{{ record.addr }}</td>
     <td>
       <div class="actions">
-        <button class="icon">
+        <button class="icon" (click)="edit(record.zone_id,RecordType.AAAA,  record.id)">
           <svg height="24" viewBox="0 -960 960 960" width="24">
             <path
               d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
@@ -58,7 +58,7 @@
     <td>{{ record.target }}</td>
     <td>
       <div class="actions">
-        <button class="icon">
+        <button class="icon" (click)="edit(record.zone_id, RecordType.CNAME, record.id)">
           <svg height="24" viewBox="0 -960 960 960" width="24">
             <path
               d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
@@ -79,7 +79,7 @@
     <td>{{ record.preference }} {{ record.exchange }}</td>
     <td>
       <div class="actions">
-        <button class="icon">
+        <button class="icon" (click)="edit(record.zone_id,RecordType.MX,  record.id)">
           <svg height="24" viewBox="0 -960 960 960" width="24">
             <path
               d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
@@ -100,7 +100,7 @@
     <td>{{ record.target }}</td>
     <td>
       <div class="actions">
-        <button class="icon">
+        <button class="icon" (click)="edit(record.zone_id,RecordType.NS,  record.id)">
           <svg height="24" viewBox="0 -960 960 960" width="24">
             <path
               d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
@@ -121,7 +121,7 @@
     <td>{{ record.content }}</td>
     <td>
       <div class="actions">
-        <button class="icon">
+        <button class="icon" (click)="edit(record.zone_id,RecordType.TXT,  record.id)">
           <svg height="24" viewBox="0 -960 960 960" width="24">
             <path
               d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
